[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
memoize = "0.4.2"
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.10.2"
regex-macro = "0.2.0"
